candidate/java-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
      app: java-app
  name: java-app
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /metrics
      prometheus.io/port:   '8080'
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
      app: java-app
